--- a/style.css
+++ b/style.css
@@ -33,21 +33,40 @@ body {
     font-size: 24px;
 }
 
-.numbers, .operators, .clear {
+.numbers, .operators, .clear, .equal {
     width: 25%;
     height: 80px;
-    border: .5px solid black;
+    border: .5px solid #000000;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
 }
+
 .numbers {
     background-color: #d0d0d0;
 }
+.numbers:active {
+    background-color:#c0c0c0;
+}
+
 .operators {
     background-color: #c0c0c0;
 }
+.operators:active {
+    background-color: #afafaf;
+
+}
 .clear {
     background-color: #ff9900;
+}
+.clear:active {
+    background-color: #ee9000;
+}
+
+.equal {
+    background-color: #0080ff;
+}
+.equal:active {
+    background-color: #0070e0;
 }
